fix(sub tabs): Fix focused tab text color contrast

--- a/ui/components/tabs/base/_index.scss
+++ b/ui/components/tabs/base/_index.scss
@@ -102,7 +102,6 @@
   &:focus,
   &.slds-has-focus {
     outline: 0;
-    color: $brand-accessible;
 
     &:after {
       height: ($border-width-thick + 1);
